--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "jquery": "~2.1.4",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "angular-material": "^1.0.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
